Arreglar edit add delete UI un monton de cosas
Introduces a Python backend server with REST API endpoints for loading and saving curriculum data to a JSON file. Updates the frontend to use the backend API for data persistence, adds delete and edit actions to the UI, improves prerequisite (previas) management, and refines Spanish terminology throughout. Also includes new styles for search results, enhanced empty state handling, and a more robust start script. Adds a sample data file for initial setup.

--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
                         </div>
                     </div>
 
-                    <!-- Prerequisitos -->
+                    <!-- Previas -->
                     <div class="form-card">
                         <div class="card-header">
-                            <h3><i class="fas fa-sitemap"></i> Prerequisitos</h3>
+                            <h3><i class="fas fa-sitemap"></i> Previas</h3>
                         </div>
                         <div class="card-body">
                             <div class="prerequisites-header">
-                                <h3>Agregar Prerequisitos</h3>
+                                <h3>Agregar Previas</h3>
                                 <div class="prerequisite-buttons">
                                     <button type="button" class="btn-add-prereq btn-add-simple" onclick="addSimplePrerequisite()">
                                         <i class="fas fa-bookmark"></i>
@@ -191,7 +191,7 @@
                             <div id="prerequisites-container" class="prerequisites-container">
                                 <div class="empty-state">
                                     <i class="fas fa-sitemap"></i>
-                                    <p>No hay prerequisitos definidos</p>
+                                    <p>No hay previas definidas</p>
                                     <small>Usa los botones de arriba para agregar prerequisitos</small>
                                 </div>
                             </div>
@@ -276,7 +276,7 @@
                                 </div>
                                 <div class="stat">
                                     <span class="stat-number" id="stats-with-prereq">0</span>
-                                    <span class="stat-label">Con prerequisitos</span>
+                                    <span class="stat-label">con previas</span>
                                 </div>
                             </div>
                         </div>
