--- a/b.html
+++ b/b.html
@@ -191,7 +191,7 @@
                             <div id="prerequisites-container" class="prerequisites-container">
                                 <div class="empty-state">
                                     <i class="fas fa-sitemap"></i>
-                                    <p>No hay prerequisitos definidos</p>
+                                    <p>No hay previas definidas</p>
                                     <small>Usa los botones de arriba para agregar prerequisitos</small>
                                 </div>
                             </div>
@@ -276,7 +276,7 @@
                                 </div>
                                 <div class="stat">
                                     <span class="stat-number" id="stats-with-prereq">0</span>
-                                    <span class="stat-label">Con prerequisitos</span>
+                                    <span class="stat-label">con previas</span>
                                 </div>
                             </div>
                         </div>
